feat: tmall tracker - electron plugin

--- a/apps/tmall-tracker/src/tsconfig.json
+++ b/apps/tmall-tracker/src/tsconfig.json
@@ -4,5 +4,6 @@
     "paths": {
       "@/*": ["./*", "./*/index.ts"]
     }
-  }
+  },
+  "include": [".", "../../electron/node_modules/electron"]
 }
