feat: tmall tracker - electron config

--- a/apps/tmall-tracker/package.json
+++ b/apps/tmall-tracker/package.json
@@ -17,5 +17,6 @@
   "devDependencies": {
     "bun-plugin-tailwind": "catalog:",
     "tailwindcss": "catalog:"
-  }
+  },
+  "electron": "./scripts/electron.config.ts"
 }
