--- a/apps/music-converter/package.json
+++ b/apps/music-converter/package.json
@@ -2,7 +2,6 @@
   "name": "music-converter",
   "private": true,
   "type": "module",
-  "main": "dist/main/index.js",
   "scripts": {
     "build": "bun run scripts/build",
     "dev": "bun run scripts/dev"
@@ -20,5 +19,6 @@
     "@types/crypto-js": "^4.2.2",
     "bun-plugin-tailwind": "catalog:",
     "tailwindcss": "catalog:"
-  }
+  },
+  "electron": "scripts/electron.config.ts"
 }
